﻿----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-10-13 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * left.php: preselect db if only one db

2005-10-12 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css/phpmyadmin.css.php, libraries/common.lib.php,
      themes/darkblue_orange/css/theme_right.css.php,
      themes/original/css/theme_right.css.php:
      use list for navigation tabs RFE #1290423 
    * db_details_structure.php: fixed NOTICE
    * css/phpmyadmin.css.php, themes/*/css/theme_*.css.php:
      revert icon size to fixed width and height
    * libraries/session.inc.php:
      dont use 6-bit chars on windows
    * css/phpmyadmin.css.php:
      display bug in FF with tabs in querywindow
    * libraries/common.lib.php:
      fixed rowcount in left frame for tables in information_schema
    * libraries/sql_query_form.lib.php:
      XHTML compl.
    * css/phpmyadmin.css.php, server_status.php, server_databases.php
      server_collations.php, server_engines.php, server_privileges.php
      server_variables.php: XHTML compl.

2005-10-12 Michal Čihař  <michal@cihar.com>
    * libraries/get_foreign.lib.php: Fix paging.
    * tbl_properties_links.php: Make drop and empty tabs lead to structure
      instead of SQL.
    * libraries/common.lib.php: Use normal font sizes for Mozilla browsers.
    * querywindow.php: Add icon for history tab.

2005-10-11 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/grab_globals.lib.php: bug #1322871, local file inclusion

2005-10-11 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * footer.inc.php, index.php, left.php, queryframe.php, querywindow.php
      server_databases.php, css/phpmyadmin.css.php, libraries/common.lib.php
      libraries/left_header.inc.php, libraries/sql_query_form.lib.php
      themes/darkblue_orange/css/theme_left.css.php
      themes/original/css/theme_left.css.php:
      XHTML 1.0 trans. compliance and more semantic XHTML output